[gd_scene load_steps=7 format=2]

[ext_resource path="res://img/btn_iniciarsesion2.png" type="Texture" id=1]
[ext_resource path="res://img/NUEVO/selemundo2.png" type="Texture" id=2]
[ext_resource path="res://img/btn_iniciarsesion.png" type="Texture" id=3]
[ext_resource path="res://img/flecha_iz.png" type="Texture" id=4]
[ext_resource path="res://img/NUEVO/select_mundo.png" type="Texture" id=5]
[ext_resource path="res://script/Seleccion_mundo.gd" type="Script" id=6]

[node name="Seleccion_mundo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )

[node name="mundo" type="TextureRect" parent="CanvasLayer"]
margin_left = 522.0
margin_top = 282.0
margin_right = 1458.0
margin_bottom = 792.0
texture = ExtResource( 2 )
expand = true

[node name="TextureButton" type="TextureButton" parent="CanvasLayer"]
margin_left = 253.0
margin_top = 429.0
margin_right = 404.0
margin_bottom = 587.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="TextureButton2" type="TextureButton" parent="CanvasLayer"]
margin_left = 1571.0
margin_top = 433.0
margin_right = 1699.0
margin_bottom = 604.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
expand = true
flip_h = true

[node name="button_play" type="TextureButton" parent="CanvasLayer"]
margin_left = 877.0
margin_top = 860.0
margin_right = 1178.0
margin_bottom = 946.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )

[connection signal="pressed" from="CanvasLayer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="CanvasLayer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="CanvasLayer/button_play" to="." method="_on_button_play_pressed"]
